devops/kustomize/base/tekton/pipelines/network-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: enable-pipeline-to-internet
  labels:
    name: enable-pipeline-to-internet
    part-of: hsb
    version: 1.0.0
    component: pipeline
    managed-by: kustomize
    created-by: jeremy.foster
  annotations:
    description: Enable the pipeline to communicate with the internet
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 142.34.229.249/32
        - ipBlock:
            cidr: 142.34.94.249/32
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      part-of: hsb
      component: pipeline
  policyTypes:
    - Egress
